// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBox Component should allow custom checked Icon 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  checkedIcon={
    <Image
      source={
        Object {
          "uri": "https://image.ibb.co/jcY95H/checked.png",
        }
      }
      style={
        Object {
          "height": 30,
          "width": 30,
        }
      }
    />
  }
  size={24}
  style={
    Object {
      "margin": 5,
      "marginLeft": 10,
      "marginRight": 10,
      "padding": 10,
    }
  }
  uncheckedColor="#bfbfbf"
  uncheckedIcon={
    <Image
      source={
        Object {
          "uri": "https://image.ibb.co/fda0Cx/no_check.png",
        }
      }
      style={
        Object {
          "height": 30,
          "width": 30,
        }
      }
    />
  }
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <CheckBoxIcon
      center={false}
      checked={true}
      checkedColor="#2089dc"
      checkedIcon={
        <Image
          source={
            Object {
              "uri": "https://image.ibb.co/jcY95H/checked.png",
            }
          }
          style={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
      }
      component={[Function]}
      iconRight={false}
      right={false}
      size={24}
      theme={
        Object {
          "colors": Object {
            "divider": "#bcbbc1",
            "error": "#ff190c",
            "grey0": "#393e42",
            "grey1": "#43484d",
            "grey2": "#5e6977",
            "grey3": "#86939e",
            "grey4": "#bdc6cf",
            "grey5": "#e1e8ee",
            "greyOutline": "#bbb",
            "primary": "#2089dc",
            "searchBg": "#303337",
            "secondary": "#8F0CE8",
          },
        }
      }
      uncheckedColor="#bfbfbf"
      uncheckedIcon={
        <Image
          source={
            Object {
              "uri": "https://image.ibb.co/fda0Cx/no_check.png",
            }
          }
          style={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
      }
    />
  </Component>
</TouchableOpacity>
`;

exports[`CheckBox Component should allow custom checked Icon 2`] = `
<TouchableOpacity
  activeOpacity={0.2}
  checkedIcon={
    <Image
      source={
        Object {
          "uri": "https://image.ibb.co/jcY95H/checked.png",
        }
      }
      style={
        Object {
          "height": 30,
          "width": 30,
        }
      }
    />
  }
  size={24}
  style={
    Object {
      "margin": 5,
      "marginLeft": 10,
      "marginRight": 10,
      "padding": 10,
    }
  }
  uncheckedColor="#bfbfbf"
  uncheckedIcon={
    <Image
      source={
        Object {
          "uri": "https://image.ibb.co/fda0Cx/no_check.png",
        }
      }
      style={
        Object {
          "height": 30,
          "width": 30,
        }
      }
    />
  }
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <CheckBoxIcon
      center={false}
      checked={false}
      checkedColor="#2089dc"
      checkedIcon={
        <Image
          source={
            Object {
              "uri": "https://image.ibb.co/jcY95H/checked.png",
            }
          }
          style={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
      }
      component={[Function]}
      iconRight={false}
      right={false}
      size={24}
      theme={
        Object {
          "colors": Object {
            "divider": "#bcbbc1",
            "error": "#ff190c",
            "grey0": "#393e42",
            "grey1": "#43484d",
            "grey2": "#5e6977",
            "grey3": "#86939e",
            "grey4": "#bdc6cf",
            "grey5": "#e1e8ee",
            "greyOutline": "#bbb",
            "primary": "#2089dc",
            "searchBg": "#303337",
            "secondary": "#8F0CE8",
          },
        }
      }
      uncheckedColor="#bfbfbf"
      uncheckedIcon={
        <Image
          source={
            Object {
              "uri": "https://image.ibb.co/fda0Cx/no_check.png",
            }
          }
          style={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
      }
    />
  </Component>
</TouchableOpacity>
`;

exports[`CheckBox Component should render with icon and checked 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  checkedIcon="check-square-o"
  iconType="font-awesome"
  size={24}
  style={
    Object {
      "backgroundColor": "red",
      "margin": 5,
      "marginLeft": 10,
      "marginRight": 10,
      "padding": 10,
    }
  }
  uncheckedColor="#bfbfbf"
  uncheckedIcon="square-o"
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <CheckBoxIcon
      center={false}
      checked={false}
      checkedColor="red"
      checkedIcon="check-square-o"
      component={[Function]}
      containerStyle={
        Object {
          "backgroundColor": "red",
        }
      }
      iconRight={false}
      iconType="font-awesome"
      right={false}
      size={24}
      theme={
        Object {
          "colors": Object {
            "divider": "#bcbbc1",
            "error": "#ff190c",
            "grey0": "#393e42",
            "grey1": "#43484d",
            "grey2": "#5e6977",
            "grey3": "#86939e",
            "grey4": "#bdc6cf",
            "grey5": "#e1e8ee",
            "greyOutline": "#bbb",
            "primary": "#2089dc",
            "searchBg": "#303337",
            "secondary": "#8F0CE8",
          },
        }
      }
      uncheckedColor="#bfbfbf"
      uncheckedIcon="square-o"
    />
  </Component>
</TouchableOpacity>
`;

exports[`CheckBox Component should render with icon and iconRight 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  checkedIcon="check-square-o"
  iconType="font-awesome"
  size={24}
  style={
    Object {
      "margin": 5,
      "marginLeft": 10,
      "marginRight": 10,
      "padding": 10,
    }
  }
  uncheckedColor="blue"
  uncheckedIcon="square-o"
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <CheckBoxIcon
      center={true}
      checked={false}
      checkedColor="#2089dc"
      checkedIcon="check-square-o"
      component={[Function]}
      iconRight={true}
      iconType="font-awesome"
      right={true}
      size={24}
      theme={
        Object {
          "colors": Object {
            "divider": "#bcbbc1",
            "error": "#ff190c",
            "grey0": "#393e42",
            "grey1": "#43484d",
            "grey2": "#5e6977",
            "grey3": "#86939e",
            "grey4": "#bdc6cf",
            "grey5": "#e1e8ee",
            "greyOutline": "#bbb",
            "primary": "#2089dc",
            "searchBg": "#303337",
            "secondary": "#8F0CE8",
          },
        }
      }
      uncheckedColor="blue"
      uncheckedIcon="square-o"
    />
  </Component>
</TouchableOpacity>
`;

exports[`CheckBox Component should render without issues 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  checkedIcon="check-square-o"
  size={24}
  style={
    Object {
      "margin": 5,
      "marginLeft": 10,
      "marginRight": 10,
      "padding": 10,
    }
  }
  uncheckedColor="#bfbfbf"
  uncheckedIcon="square-o"
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <CheckBoxIcon
      center={false}
      checked={false}
      checkedColor="#2089dc"
      checkedIcon="check-square-o"
      component={[Function]}
      iconRight={false}
      right={false}
      size={24}
      theme={
        Object {
          "colors": Object {
            "divider": "#bcbbc1",
            "error": "#ff190c",
            "grey0": "#393e42",
            "grey1": "#43484d",
            "grey2": "#5e6977",
            "grey3": "#86939e",
            "grey4": "#bdc6cf",
            "grey5": "#e1e8ee",
            "greyOutline": "#bbb",
            "primary": "#2089dc",
            "searchBg": "#303337",
            "secondary": "#8F0CE8",
          },
        }
      }
      uncheckedColor="#bfbfbf"
      uncheckedIcon="square-o"
    />
  </Component>
</TouchableOpacity>
`;
